# compete-ai-streamlit

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.py  streamlit_app.py  version.py
agents/: __init__.py  analysis_engine.py  data_collection_agent.py  orchestrator.py
tests/: test_sanity.py
