[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/( 
    \.git
  | \.__pycache__
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | .streamlit
  | .ui_state
)/
'''

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".streamlit",
    ".ui_state",
    "build",
    "dist",
]
ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "W503",  # Line break before binary operator (conflicts with black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
norecursedirs = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".streamlit",
    ".ui_state",
    "build",
    "dist",
]

[project]
name = "compete-ai"
dynamic = ["version"]
description = "A production-ready competitive intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Marian Bolous", email = "marian.bolous@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Business/Industry",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/MarianBolous/compete-ai-streamlit"
"Issues" = "https://github.com/MarianBolous/compete-ai-streamlit/issues"
"Documentation" = "https://github.com/MarianBolous/compete-ai-streamlit"